--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@hookform/resolvers": "^4.0.0",
     "axios": "^1.7.9",
     "framer-motion": "^12.4.7",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
@@ -19,6 +21,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-to-pdf": "^1.0.1",
+    "react-to-print": "^3.0.5",
     "uuid": "^11.1.0",
     "zod": "^3.24.2"
   },
