--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "cross-env PORT=8080 next start",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.0.0",
     "axios": "^1.7.9",
-    "cross-env": "^7.0.3",
     "framer-motion": "^12.4.7",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.0",
