Payment with monri first part

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 NEXT_PUBLIC_BACKEND_API_URL="https://arrow-agency-back-production.up.railway.app/api/"
+NEXT_PUBLIC_MERCHANT_KEY="key-749df1c3511586cb80d4f0a43b39dada"
+NEXT_PUBLIC_MONRI_AUTHENTICITY_TOKEN="8c2bc91a3c0d7e7e2297434956c8f5747c661d1f"
